<resources>
    <string name="app_name">Investigacion</string>
    <string name="titulo">Nombre</string>
    <string name="btnBuscar">Buscar Negocios</string>
    <string name="btnVendedor">Vendedor</string>
    <string name="lblGPS">GPS</string>
    <string name="lblRegistro">Registro de vendedores</string>
    <string name="lblNombreNegocio">Nombre del negocio:</string>
    <string name="lblPropietario">Nombre del Propietario:</string>
    <string name="lblCategoria">Categoria:</string>
    <string name="btnLista">Ver lista</string>
    <string name="lblUbicacion">Ubicación</string>
    <string name="btnUbicacion">Ver ubicación</string>
    <string name="lblInfo">Información</string>
    <string name="btnBack">Regresar</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="lstNegocios">Negocios</string>
    <string name="loginUsuario">Usuario</string>
    <string name="loginPassword">Credencial</string>
    <string name="LoginRegistro">Registrarse</string>
    <string name="login">Iniciar Sesion</string>
    <string name="loginbtnIngresar">Ingresar</string>
    <string name="Registro">Registro</string>
    <string name="RegistroNombre">Nombre</string>
    <string name="RegistroNegocio">Nombre del negocio</string>
    <string name="RegistroCorreo">Usuario</string>
    <string name="RegistroCredencial">Credencial</string>
    <string name="RegistroDescripcion">Decripcion</string>
    <string name="RegistroBTNregistrar">Registrar</string>
    <string name="btnVerNegocio">Ver Negocio</string>
    <string name="btnVerListaMenu">Ver menú</string>
    <string name="btnComprador">Comprador</string>
</resources>